--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -36,7 +36,8 @@
 <br><br>
 
 <% else %>
-<div class="carousel slide h-100" id="dashes">
+<div class="carousel slide h-100" id="dashes" 
+  data-interval="false" data-keyboard="false" data-ride="false" data-wrap="false">
 </div>
 
 <footer><p id="loading" class="loading" style="color: #fff;">Loading</p>
