--- a/app/views/branches/updates.html.erb
+++ b/app/views/branches/updates.html.erb
@@ -15,10 +15,10 @@
 
         <!-- CHART -->
         <div style="max-height: 250px;">
-          <canvas id="doughnutChart1"></canvas>
-          <input type="hidden" id="success1" value="60"></input>
-          <input type="hidden" id="fail1" value="28"></input>
-          <input type="hidden" id="unstable1" value="12"></input>
+          <canvas id="doughnutChart<%= slide %>"></canvas>
+          <input type="hidden" id="success<%= slide %>" value="60"></input>
+          <input type="hidden" id="fail<%= slide %>" value="28"></input>
+          <input type="hidden" id="unstable<%= slide %>" value="12"></input>
         </div>
 
         <!-- WORST HEALTH -->
