--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../assets/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/node_modules/font-awesome/css/font-awesome.min.css">
 
   </head>
 
@@ -27,9 +27,9 @@
       </nav>
     <% end %>
     <%= yield %>
-    <script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="assets/node_modules/tether/dist/js/tether.min.js"></script>
-    <script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="assets/node_modules/chart.js/dist/Chart.min.js"></script>
+    <script src="../../assets/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../../assets/node_modules/tether/dist/js/tether.min.js"></script>
+    <script src="../../assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../../assets/node_modules/chart.js/dist/Chart.min.js"></script>
   </body>
 </html>
