removed navbar on admin pages

--- a/app/views/branches/updates.html.erb
+++ b/app/views/branches/updates.html.erb
@@ -140,7 +140,7 @@
 
                   <% if not subjobs.nil? %>
 
-                    <ul class="list-group list-group-flush" style="flex: 1 auto;">
+                    <ul class="list-group list-group-flush bg-faded" style="flex: 1 auto;">
 
                     <% subjobs.each do |subjob| %>
 
