Final views for admin

--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -1,5 +1,8 @@
-<div class="container", id="branchnewform">
-	<h1>New Branch</h1>
-
-	<%= render 'form', branch: @branch %>
-</div>
+<main class="container mt-4">
+  <div class="card m-auto" style="width: 20rem;">
+      <div class="card-block">
+          <h2>New branch</h2>
+          <%= render 'form', branch: @branch %>
+      </div>
+  </div>
+</main>
