--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -2,7 +2,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class = "container" id="branchestable">
+<!-- <div class = "container" id="branchestable">
   <div class="row" id="branchesheader">
     <div class="col-sm-6" id="brancheslabel">
       <h1>Branches</h1>
@@ -33,7 +33,57 @@
       <% end %>
   </table>
 </div>
-<br><br>
+<br><br> -->
+
+<main class="container mt-4 p-4 bg-white rounded">
+        <div class="alert alert-warning" role="alert">
+            <form class="form-inline justify-content-between">
+                <h5 class="mb-0">Logged in as <%= current_user.email %> </h5>
+                <%= link_to "Sign out", destroy_user_session_path, :method => 'delete', :class => "btn btn-sm align-middle btn-outline-primary", :type => "button" %>
+            </form>
+        </div>
+        <div class="d-flex justify-content-between">
+            <h2>Branches</h2>
+            <a href="/branches/new" class="align-self-center">
+                <i class="fa fa-plus"></i> New Branch</a>
+        </div>
+        <table class="table table-hover table-default table-responsive" id="branches">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Branch json url</th>
+                    <th>Alert Message</th>
+                    <th>Display?</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <% @branches.each do |branch| %>
+              <tr>
+                  <td><%= branch.name %></td>
+                  <td><%= branch.branch_json_url %></td>
+                  <td><%= branch.alertMessage %></td>
+                  <td><%= branch.displayAlert? %></td>
+                  <td><%= link_to 'Edit', edit_branch_path(branch) %></td>
+                  <td><%= link_to 'Delete', branch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+        </table>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <% else %>
 <div class="carousel slide h-100" id="dashes" 
